tests/valid/function/type_forall_fn_value_annotated_let.facet
fn id<T>(x: affine T) -> affine T {
  x
}

fn main() -> affine isize {
  let f: unrestricted for<T> fn(affine T) -> affine T = id in
  (f 1)
}
