tests/invalid/immutable_assign/immutable_param.facet
fn f(x: unrestricted isize) -> unrestricted isize {
    (x = 42);
    x
}
